--- a/variants/UNO_R4/e2studio_project/.settings/com.renesas.cdt.ddsc.packs.componentfiles.prefs
+++ b/variants/UNO_R4/e2studio_project/.settings/com.renesas.cdt.ddsc.packs.componentfiles.prefs
@@ -19,6 +19,8 @@ Renesas\#\#HAL\ Drivers\#\#all\#\#r_dtc\#\#\#\#3.7.0/all=428353588,ra/fsp/inc/in
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_dtc\#\#\#\#3.7.0/libraries=
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_flash_lp\#\#\#\#3.7.0/all=2440695345,ra/fsp/inc/instances/r_flash_lp.h|1976517121,ra/fsp/inc/api/r_flash_api.h|2442274862,ra/fsp/src/r_flash_lp/r_flash_lp.c|34437234,ra/fsp/inc/api/r_cgc_api.h
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_flash_lp\#\#\#\#3.7.0/libraries=
+Renesas\#\#HAL\ Drivers\#\#all\#\#r_gpt\#\#\#\#3.7.0/all=3073491683,ra/fsp/src/r_gpt/r_gpt.c|1101069320,ra/fsp/inc/instances/r_gpt.h|1385984689,ra/fsp/inc/api/r_timer_api.h
+Renesas\#\#HAL\ Drivers\#\#all\#\#r_gpt\#\#\#\#3.7.0/libraries=
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_icu\#\#\#\#3.7.0/all=1002305543,ra/fsp/inc/api/r_external_irq_api.h|1806776990,ra/fsp/src/r_icu/r_icu.c|1175293790,ra/fsp/inc/instances/r_icu.h
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_icu\#\#\#\#3.7.0/libraries=
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_iic_master\#\#\#\#3.7.0/all=1163980116,ra/fsp/src/r_iic_master/r_iic_master.c|2978087792,ra/fsp/inc/api/r_elc_api.h|1587407673,ra/fsp/inc/api/r_i2c_master_api.h|2170971077,ra/fsp/inc/api/r_transfer_api.h|1116392784,ra/fsp/inc/instances/r_iic_master.h
