--- a/variants/UNO_R4/e2studio_project/.settings/com.renesas.cdt.ddsc.packs.componentfiles.prefs
+++ b/variants/UNO_R4/e2studio_project/.settings/com.renesas.cdt.ddsc.packs.componentfiles.prefs
@@ -11,6 +11,8 @@ Renesas\#\#Common\#\#all\#\#fsp_common\#\#\#\#3.7.0/all=2023808024,ra/fsp/src/bs
 Renesas\#\#Common\#\#all\#\#fsp_common\#\#\#\#3.7.0/libraries=
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_adc\#\#\#\#3.7.0/all=2065369618,ra/fsp/src/r_adc/r_adc.c|2915671340,ra/fsp/inc/api/r_adc_api.h|2592638374,ra/fsp/inc/instances/r_adc.h|2978087792,ra/fsp/inc/api/r_elc_api.h|2170971077,ra/fsp/inc/api/r_transfer_api.h
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_adc\#\#\#\#3.7.0/libraries=
+Renesas\#\#HAL\ Drivers\#\#all\#\#r_agt\#\#\#\#3.7.0/all=3999514369,ra/fsp/inc/instances/r_agt.h|4174903722,ra/fsp/src/r_agt/r_agt.c|1385984689,ra/fsp/inc/api/r_timer_api.h
+Renesas\#\#HAL\ Drivers\#\#all\#\#r_agt\#\#\#\#3.7.0/libraries=
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_dac\#\#\#\#3.7.0/all=2385623637,ra/fsp/inc/instances/r_dac.h|2387772377,ra/fsp/src/r_dac/r_dac.c|4193050144,ra/fsp/inc/api/r_dac_api.h
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_dac\#\#\#\#3.7.0/libraries=
 Renesas\#\#HAL\ Drivers\#\#all\#\#r_dmac\#\#\#\#3.7.0/all=183147201,ra/fsp/inc/instances/r_dmac.h|1566131584,ra/fsp/src/r_dmac/r_dmac.c|2170971077,ra/fsp/inc/api/r_transfer_api.h
