--- a/variants/PORTENTA_H33/e2studio_project/.settings/com.renesas.cdt.ddsc.threads.configurator.prefs
+++ b/variants/PORTENTA_H33/e2studio_project/.settings/com.renesas.cdt.ddsc.threads.configurator.prefs
@@ -20,8 +20,16 @@ collapse/module.driver.i2c_on_sci_i2c.757277155=false
 collapse/module.driver.i2s_on_ssi.1763083514=false
 collapse/module.driver.rm_block_media_on_rm_block_media_sdmmc.952629612=false
 collapse/module.driver.sdmmc_on_sdmmc.1455045922=false
+collapse/module.driver.spi_on_sci_spi.1104963287=false
+collapse/module.driver.spi_on_sci_spi.1315041084=false
+collapse/module.driver.spi_on_sci_spi.1350582532=false
 collapse/module.driver.spi_on_sci_spi.16499920=false
 collapse/module.driver.spi_on_sci_spi.1779778885=false
+collapse/module.driver.spi_on_sci_spi.2048174220=false
+collapse/module.driver.spi_on_sci_spi.298783710=false
+collapse/module.driver.spi_on_sci_spi.705629095=false
+collapse/module.driver.spi_on_sci_spi.70926858=false
+collapse/module.driver.spi_on_sci_spi.85024692=false
 collapse/module.driver.spi_on_spi.70474099=false
 collapse/module.driver.spi_on_spi.894590866=false
 collapse/module.driver.uart_on_sci_uart.1058451605=false
