--- a/extras/e2studioProjects/portenta_h33/.settings/com.renesas.cdt.ddsc.threads.configurator.prefs
+++ b/extras/e2studioProjects/portenta_h33/.settings/com.renesas.cdt.ddsc.threads.configurator.prefs
@@ -1,9 +1,8 @@
 collapse/module.azure.fx.block_media.69668828=false
-collapse/module.azure.nxd.ip.676748468=false
-collapse/module.azure.nxd_bsd.829511557=false
 collapse/module.azure.usbx_port.528420754=false
+collapse/module.driver.adc_on_adc_with_dmac.697180310=false
 collapse/module.driver.basic_on_usb.821182984=false
-collapse/module.driver.ether_on_ether.509222656=false
+collapse/module.driver.ether_on_ether.117220312=false
 collapse/module.driver.i2c_on_iic_master.1333952917=false
 collapse/module.driver.i2c_on_iic_master.176947243=false
 collapse/module.driver.i2c_on_iic_master.373454883=false
@@ -44,6 +43,5 @@ collapse/module.driver.uart_on_sci_uart.635657325=false
 collapse/module.driver.uart_on_sci_uart.901804558=false
 collapse/module.driver.usbx_pcdc.192829614=false
 collapse/module.middleware.rm_filex_block_media.1679350335=false
-collapse/module.middleware.rm_netxduo_ether.1527872531=false
 collapse/module.middleware.rm_vee_flash.779115799=false
 eclipse.preferences.version=1
