--- a/libraries/Ethernet/library.properties
+++ b/libraries/Ethernet/library.properties
@@ -1,9 +1,10 @@
 name=Ethernet
-version=1.0
+version=1.0.0
 author=Arduino
 maintainer=Arduino <info@arduino.cc>
-sentence=RTC library for Renesas RA boards
-paragraph=provides helper to set and read RTC
-category=Timing
-url=https://github.com/arduino/ArduinoCore-renesas/tree/master/libraries/RTC
+sentence=Enables network connection (local and Internet) on Renesas RA boards
+paragraph=With this library you can use the Arduino Ethernet (shield or board) to connect to Internet. The library provides both client and server functionalities. The library permits you to connect to a local network also with DHCP and to resolve DNS.
+category=Communication
+url=https://github.com/arduino/ArduinoCore-renesas/tree/master/libraries/Ethernet
 architectures=renesas
+includes=Ethernet.h
