--- a/libraries/CAN/library.properties
+++ b/libraries/CAN/library.properties
@@ -2,8 +2,8 @@ name=CAN
 version=1.0
 author=Arduino
 maintainer=Arduino <info@arduino.cc>
-sentence=CAN communication library for Portenta H33 and UNO R4.
-paragraph=This library provides both CAN and CAN FD access for Portenta H33 and Uno R4.
+sentence=CAN communication library for UNO R4.
+paragraph=This library provides both CAN access for Uno R4.
 category=Other
 url=
-architectures=
+architectures=renesas
