--- a/libraries/CAN/library.properties
+++ b/libraries/CAN/library.properties
@@ -2,8 +2,9 @@ name=CAN
 version=1.0
 author=Arduino
 maintainer=Arduino <info@arduino.cc>
-sentence=CAN communication library for UNO R4.
-paragraph=This library provides both CAN access for Uno R4.
+sentence=CAN/CANFD communication library for UNO R4 and Portenta H33.
+paragraph=This library provides CAN/CANFD access for Uno R4 and Portenta H33.
 category=Other
 url=
 architectures=renesas
+include=ArduinoCAN.h
