--- a/libraries/Ethernet/library.properties
+++ b/libraries/Ethernet/library.properties
@@ -7,4 +7,4 @@ paragraph=With this library you can use the Arduino Ethernet (shield or board) t
 category=Communication
 url=https://github.com/arduino/ArduinoCore-renesas/tree/master/libraries/Ethernet
 architectures=renesas
-includes=Ethernet.h
+includes=EthernetRA.h
