--- a/extras/e2studioProjects/Santiago/.settings/com.renesas.cdt.ddsc.threads.configurator.prefs
+++ b/extras/e2studioProjects/Santiago/.settings/com.renesas.cdt.ddsc.threads.configurator.prefs
@@ -11,4 +11,5 @@ collapse/module.driver.spi_on_spi.1919007958=false
 collapse/module.driver.uart_on_sci_uart.1216293200=false
 collapse/module.driver.uart_on_sci_uart.1863600149=false
 collapse/module.driver.uart_on_sci_uart.488173617=false
+collapse/module.middleware.rm_vee_flash.170226409=false
 eclipse.preferences.version=1
