--- a/extras/e2studioProjects/portenta_h33/.settings/e2studio_project.prefs
+++ b/extras/e2studioProjects/portenta_h33/.settings/e2studio_project.prefs
@@ -1,3 +1,3 @@
 #
-#Mon Oct 24 15:53:36 CEST 2022
+#Mon Jan 09 17:41:00 CET 2023
 activeConfiguration=com.renesas.cdt.managedbuild.gnuarm.config.lib.debug.250510047
