--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = extras/tinyusb
 	url = git@github.com:bcmi-labs/tinyusb.git
 
+[submodule "extras/protobuf-c"]
+	path = extras/protobuf-c
+	url = git@github.com:protobuf-c/protobuf-c.git
