--- a/libraries/Arduino_CAN/library.properties
+++ b/libraries/Arduino_CAN/library.properties
@@ -1,4 +1,4 @@
-name=CAN
+name=Arduino_CAN
 version=1.0
 author=Arduino
 maintainer=Arduino <info@arduino.cc>
@@ -7,4 +7,4 @@ paragraph=This library provides CAN/CANFD access for Uno R4 and Portenta H33.
 category=Other
 url=
 architectures=renesas
-include=CAN.h
+include=Arduino_CAN.h
