--- a/extras/e2studioProjects/muxto_lib/.settings/com.renesas.cdt.ddsc.threads.configurator.prefs
+++ b/extras/e2studioProjects/muxto_lib/.settings/com.renesas.cdt.ddsc.threads.configurator.prefs
@@ -1,3 +1,5 @@
+collapse/module.driver.i2c_on_iic_master.1477785219=false
+collapse/module.driver.i2c_on_sci_i2c.1053428145=false
 collapse/module.driver.pcdc_on_usb.1610074047=false
 collapse/module.driver.uart_on_sci_uart.1721156276=false
 collapse/module.driver.uart_on_sci_uart.960228264=false
