--- a/libraries/SSLClient/library.properties
+++ b/libraries/SSLClient/library.properties
@@ -8,4 +8,4 @@ category=Communication
 url=
 architectures=
 precompiled=true
-ldflags=-lmbedtls -lmbedcrypto -lmbedx509
+ldflags=-lmbedtls -lmbedcrypto -lmbedx509 -lmbedse05x
