--- a/libraries/Ethernet/library.properties
+++ b/libraries/Ethernet/library.properties
@@ -7,6 +7,6 @@ paragraph=With this library you can use the Arduino Ethernet (shield or board) t
 category=Communication
 url=https://github.com/arduino/ArduinoCore-renesas/tree/master/libraries/Ethernet
 architectures=renesas
-includes=CEthernet.h
+includes=Ethernet.h
 precompiled=true
 
