--- a/libraries/WiFi/library.properties
+++ b/libraries/WiFi/library.properties
@@ -1,4 +1,4 @@
-name=WIFI
+name=WiFiC3
 version=1.0.0
 author=Arduino
 maintainer=Arduino <info@arduino.cc>
@@ -7,5 +7,4 @@ paragraph=With this library you can use the WiFi to connect to Internet. The lib
 category=Communication
 url=https://github.com/arduino/ArduinoCore-renesas/tree/master/libraries/WiFi
 architectures=renesas
-includes=CWifi.h
-
+includes=WifiC3.h
